@@ -62,6 +62,57 @@ public interface OS {
     }
 
     /**
+     * Returns the value of the system property as an integer,
+     * or the default value if the property is not set or invalid.
+     * @param key the name of the system property.
+     * @param defaultValue the default value to return if the property is not set or invalid.
+     * @return the integer value of the system property, or the default value if not set or invalid.
+     */
+    static int getProperty(String key, int defaultValue) {
+        String value = System.getProperty(key, Integer.toString(defaultValue));
+        try {
+            return Integer.parseInt(value);
+        } catch (NumberFormatException ex) {
+            System.err.println("Invalid system property '" + key + "': " + value);
+        }
+        return defaultValue;
+    }
+
+    /**
+     * Returns the value of the system property as a float,
+     * or the default value if the property is not set or invalid.
+     * @param key the name of the system property.
+     * @param defaultValue the default value to return if the property is not set or invalid.
+     * @return the float value of the system property, or the default value if not set or invalid.
+     */
+    static float getProperty(String key, float defaultValue) {
+        String value = System.getProperty(key, Float.toString(defaultValue));
+        try {
+            return Float.parseFloat(value);
+        } catch (NumberFormatException ex) {
+            System.err.println("Invalid system property '" + key + "': " + value);
+        }
+        return defaultValue;
+    }
+
+    /**
+     * Returns the value of the system property as a double,
+     * or the default value if the property is not set or invalid.
+     * @param key the name of the system property.
+     * @param defaultValue the default value to return if the property is not set or invalid.
+     * @return the double value of the system property, or the default value if not set or invalid.
+     */
+    static double getProperty(String key, double defaultValue) {
+        String value = System.getProperty(key, Double.toString(defaultValue));
+        try {
+            return Double.parseDouble(value);
+        } catch (NumberFormatException ex) {
+            System.err.println("Invalid system property '" + key + "': " + value);
+        }
+        return defaultValue;
+    }
+
+    /**
      * Parses a command line into a list of arguments, respecting quoted substrings.
      * @param command the command line to parse.
      * @return the list of command arguments.
@@ -71,6 +122,7 @@ public interface OS {
         return pattern.matcher(command)
                 .results()
                 .map(MatchResult::group)
+                .map(s -> s.replace("\"", ""))
                 .toList();
     }
 
@@ -135,7 +187,7 @@ public interface OS {
 
         // Create a thread to read the process's output
         if (outputConsumer != null) {
-            new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 try (var reader = new BufferedReader(
                         new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
                     String line;
@@ -145,7 +197,7 @@ public interface OS {
                 } catch (IOException ex) {
                     outputConsumer.accept("ERROR reading process output: " + ex.getMessage());
                 }
-            }).start();
+            });
         }
 
         return process;
