@@ -11,16 +11,14 @@ packageName := "smile"
 packageSummary := "Statistical Machine Intelligence and Learning Engine"
 packageDescription :=
   """
-    |SMILE is a fast and comprehensive machine learning, NLP, linear algebra,
-    |graph, interpolation, and visualization system in Java and Scala.
-    |With advanced data structures and algorithms, SMILE delivers
-    |state-of-art performance. SMILE is well documented and please check out
-    |the project website for programming guides and more information.
+    |SMILE is a comprehensive, high-performance machine learning framework
+    |for the JVM. SMILE Studio is an agentic IDE for data science.
     |""".stripMargin
 
 import com.typesafe.sbt.packager.MappingsHelper._
 Universal / mappings ++= Seq(
   (baseDirectory.value / "README.md") -> "README.md",
+  (baseDirectory.value / "CLI.md") -> "CLI.md",
   (baseDirectory.value / "../COPYING") -> "COPYING",
   (baseDirectory.value / "../LICENSE") -> "LICENSE"
 )
@@ -54,15 +52,18 @@ bashScriptConfigLocation := Some("${app_home}/../conf/smile.ini")
 batScriptConfigLocation := Some("%APP_HOME%\\conf\\smile.ini")
 
 bashScriptExtraDefines ++= Seq(
+  """export SMILE_HOME=$(dirname "${app_home}")""",
   """addJava "-XX:MaxMetaspaceSize=1024M"""",
   """addJava "-Xss4M"""",
   """addJava "--add-opens=java.base/java.nio=ALL-UNNAMED"""",
   """addJava "--enable-native-access=ALL-UNNAMED"""",
-  """addJava "-Dsmile.home=${app_home}/.."""",
+  """addJava "-Dsmile.home=${SMILE_HOME}"""",
   """addJava "-Dscala.usejavacp=true"""", // for Scala REPL
   """addJava "-Dscala.repl.autoruncode=${app_home}/predef.sc"""",
-  """export PYTHONPATH="${PYTHONPATH}:${app_home}/../lib/ioa-agent-0.1.0.jar"""",
-  """export PYTHONUTF8=1"""
+  """export PYTHONPATH="${PYTHONPATH}:${app_home}/../lib/ioa-agent-1.0.0.jar"""",
+  """export PYTHONUTF8=1""",
+  """source "$SMILE_HOME/venv/bin/activate"""",
+  """export LD_LIBRARY_PATH=${app_home}/../venv/Lib/site-packages/torch/lib:${app_home}/../venv/Lib/site-packages/onnxruntime/capi:$LD_LIBRARY_PATH"""
 )
 
 batScriptExtraDefines ++= Seq(
@@ -70,48 +71,66 @@ batScriptExtraDefines ++= Seq(
   """call :add_java -Xss4M""",
   """call :add_java --add-opens=java.base/java.nio=ALL-UNNAMED""",
   """call :add_java --enable-native-access=ALL-UNNAMED""",
+  """call :add_java --enable-preview""",
   """call :add_java -Dsmile.home=%APP_HOME%""",
   """call :add_java -Dscala.usejavacp=true""",
   """call :add_java -Dscala.repl.autoruncode=%APP_HOME%\bin\predef.sc""",
+  """set "JAVA_HOME=%APP_HOME%\jbr"""",
   """set OPENBLAS_NO_AVX512=1""",
   """set OPENBLAS_NUM_THREAD=1""",
-  """set "PATH=%~dp0;!PATH!"""",
-  """set PYTHONPATH=%PYTHONPATH%;%APP_HOME%\lib\ioa-agent-0.1.0.jar""",
-  """set PYTHONUTF8=1"""
+  """set PYTHONPATH=%PYTHONPATH%;%APP_HOME%\lib\ioa-agent-1.0.0.jar""",
+  """set PYTHONUTF8=1""",
+  """CALL "%APP_HOME%\venv\Scripts\activate.bat"""",
+  // activate.bat will set PATH with %PATH%, which is processed during parsing
+  // and thus does not include the new entries. We need to set PATH afterward
+  // to make sure the new entries are included.
+  """set "PATH=%~dp0;%APP_HOME%\venv\Lib\site-packages\torch\lib;!PATH!""""
 )
 
 libraryDependencies ++= Seq(
   "org.scala-lang"   %% "scala3-compiler"    % scalaVersion.value,
   "info.picocli"      % "picocli"            % "4.7.7",
-  "org.slf4j"         % "slf4j-simple"       % "2.0.17",
-  "com.openai"        % "openai-java"        % "4.30.0",
-  "com.anthropic"     % "anthropic-java"     % "2.18.0",
-  "com.google.genai"  % "google-genai"       % "1.45.0",
-  "org.commonmark"    % "commonmark"         % "0.27.1",
-  "org.xhtmlrenderer" % "flying-saucer-core" % "10.2.0",
-  "com.fifesoft"      % "rsyntaxtextarea"    % "3.6.2",
+  "ch.qos.logback"    % "logback-classic"    % "1.5.38",
+  "com.openai"        % "openai-java"        % "4.42.0",
+  "com.anthropic"     % "anthropic-java"     % "2.48.0",
+  "com.google.genai"  % "google-genai"       % "1.53.0",
+  "org.commonmark"    % "commonmark"         % "0.29.0",
+  "org.xhtmlrenderer" % "flying-saucer-core" % "10.3.0",
+  "org.eclipse.lsp4j" % "org.eclipse.lsp4j"  % "1.0.0",
+  "com.fifesoft"      % "rsyntaxtextarea"    % "3.6.3",
   "com.fifesoft"      % "rstaui"             % "3.3.2",
   "com.fifesoft"      % "spellchecker"       % "3.4.1",
-  "com.formdev"       % "flatlaf"            % "3.7.1",
+  "com.formdev"       % "flatlaf"            % "3.7.2",
   "com.formdev"       % "flatlaf-fonts-jetbrains-mono" % "2.304",
-  "org.apache.maven"  % "maven-resolver-provider" % "3.9.14",
-  "org.apache.maven.resolver"   % "maven-resolver-supplier-mvn4" % "2.0.16",
-  "org.jetbrains.kotlin"        % "kotlin-scripting-jsr223" % "2.3.20",
-  "tools.jackson.dataformat"    % "jackson-dataformat-yaml" % "3.1.1",
-  "io.modelcontextprotocol.sdk" % "mcp"          % "1.1.1",
+  "org.apache.maven"  % "maven-resolver-provider" % "3.9.16",
+  "org.apache.maven.resolver"   % "maven-resolver-supplier-mvn4" % "2.0.20",
+  "io.modelcontextprotocol.sdk" % "mcp"          % "2.0.0",
   "io.github.furstenheim"       % "copy_down"    % "1.1",
-  "org.jsoup"                   % "jsoup"        % "1.22.1",
-  "com.github.serpapi"          % "serpapi-java" % "1.0.0",
-  "com.google.code.gson"        % "gson"         % "2.13.2" // evict older version used by serpapi
+  "org.jsoup"                   % "jsoup"        % "1.22.2",
+  "com.github.serpapi"          % "serpapi-java" % "1.1.0",
+  "com.google.code.gson"        % "gson"         % "2.14.0" // evict older version used by serpapi
 )
 
 libraryDependencies ++= {
-  val arrowV = "18.3.0"
+  val jacksonV = "3.2.1"
+  val jsonschemaV = "4.38.0"
   Seq(
-    "org.apache.arrow" % "arrow-dataset" % arrowV,
-    "org.apache.arrow" % "arrow-memory-netty" % arrowV,
-    "org.apache.avro" % "avro" % "1.12.1" exclude("org.slf4j", "slf4j-log4j12"),
-    "org.xerial.snappy" % "snappy-java" % "1.1.10.8", // for avro
-    "com.epam" % "parso" % "2.0.14", // SAS7BDAT
+    "tools.jackson.core"       % "jackson-databind"            % jacksonV,
+    "tools.jackson.dataformat" % "jackson-dataformat-yaml"     % jacksonV,
+    "com.github.victools"      % "jsonschema-generator"        % jsonschemaV,
+    "com.github.victools"      % "jsonschema-module-jackson"   % jsonschemaV,
+    "com.github.victools"      % "jsonschema-module-swagger-2" % jsonschemaV
   )
 }
+
+libraryDependencies ++= {
+  val arrowV = "19.0.0"
+  Seq(
+    "org.apache.arrow"   % "arrow-dataset"       % arrowV,
+    "org.apache.arrow"   % "arrow-memory-unsafe" % arrowV,
+    "org.apache.avro"    % "avro"                % "1.12.1" exclude("org.slf4j", "slf4j-log4j12"),
+    "org.xerial.snappy"  % "snappy-java"         % "1.1.10.8", // for avro
+    "com.epam"           % "parso"               % "2.0.14"    // SAS7BDAT
+  )
+}
+
